manifest/objects/DMMAX__Insight__c.object
<CustomObject>
    <fields>
        <fullName>DMMAX__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__Channel_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Channel_Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__Channel_Digest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Channel_Digest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__Channel_Inline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Channel_Inline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__Check__c</fullName>
        <label>Check</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>daily</fullName>
                </value>
                <value>
                    <fullName>weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMMAX__Click_Through_Value__c</fullName>
        <label>Click Through Value</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__CreatedById__c</fullName>
        <label>CreatedById</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__CreatedByName__c</fullName>
        <label>CreatedByName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__Created__c</fullName>
        <label>Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DMMAX__Days_To_Show__c</fullName>
        <defaultValue>0</defaultValue>
        <description>How many days should we display this insight for if it&apos;s firing on an object</description>
        <label>Days To Show</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__DealmakerID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMMAX__Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if insight has been deleted</description>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__Importance__c</fullName>
        <label>Importance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__Insight_changed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It will be true if Insight was changed</description>
        <label>Insight Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__LastUpdatedById__c</fullName>
        <label>LastUpdatedById</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__LastUpdatedByName__c</fullName>
        <label>LastUpdatedByName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__LastUpdated__c</fullName>
        <label>LastUpdated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DMMAX__Library_Insight_Id__c</fullName>
        <label>Library Insight Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__Library_Version_Number__c</fullName>
        <label>Library Version Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__LocalizationVersion__c</fullName>
        <defaultValue>0</defaultValue>
        <label>LocalizationVersion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__Notify__c</fullName>
        <label>Notify</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>daily</fullName>
                </value>
                <value>
                    <fullName>weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMMAX__Order__c</fullName>
        <description>Sort order</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>DMMAX__Insight__c</referenceTo>
        <relationshipName>Insights</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMMAX__RefId__c</fullName>
        <externalId>true</externalId>
        <label>RefId</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMMAX__Renotify__c</fullName>
        <label>Renotify</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>daily</fullName>
                </value>
                <value>
                    <fullName>weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMMAX__Respect_Parent_Context__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Respect Parent Context</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__RuleDescription__c</fullName>
        <label>Rule Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMMAX__Rule__c</fullName>
        <label>Rule</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMMAX__Script__c</fullName>
        <label>Script</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMMAX__Source__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Source</label>
        <referenceTo>DMMAX__Source__c</referenceTo>
        <relationshipName>Insights</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMMAX__Text__c</fullName>
        <label>Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMMAX__Type_Inform__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Type Inform</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__Type_Notify__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Type Notify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__friendlyText__c</fullName>
        <label>friendlyText</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Max Insight</label>
    <nameField>
        <label>Insight Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Max Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>